# trading-2026-1

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  HUMAN_PM_MEMO.md  MEMO.md  PLAN_TQQQ_NEXT.md  README.md  STRUCTURE.md  WATCHLIST.md  pyproject.toml
.agents/context/: cross_asset_evidence.md  cross_asset_lessons.md  use_cases.md
.agents/rules/: ai-agent-guidelines.md  execution-model.md
.claude/commands/: daily-followup.md  evaluate-best.md  launch-new-asset.md  new-experiment.md  pre-experiment-research.md  rebuild-followup.md  run-experiment.md  update-experiment-docs.md  validate-experiment.md
.github/workflows/: lint.yml  stock-scanner.yml  tqqq-backtest.yml  trading-followup-summary.yml  trading-followup.yml
docs/: experiment-writing-guidelines.md
experiments/EXP-0001-tqqq-capitulation/: config.yaml  notes.md
pm/: HUMAN_PM_MEMO.md  USE_CASES.md
registry/: experiments.csv
results/cibr_001_pullback_wr/: latest.json
results/cibr_002_vol_adaptive_mr/: latest.json
results/cibr_003_bb_squeeze_breakout/: latest.json
results/cibr_004_rsi2_vol_adaptive/: latest.json
results/cibr_005_20d_lookback_mr/: latest.json
results/cibr_006_rs_momentum_pullback/: latest.json
results/cibr_007_bb_lower_mr/: latest.json
results/cibr_007_trend_momentum_pullback/: latest.json
results/cibr_008_bb_lower_pullback_cap/: latest.json
results/cibr_009_key_reversal_day_mr/: latest.json
tests/: conftest.py  test_execution_open_positions.py  test_followup_backtest_cli.py  test_followup_backtest_data.py  test_followup_backtest_ledger.py
(+2566 files in other folders)
