[project]
name = "trading-tw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "shioaji[speed]>=1.3.2",
]

[project.scripts]
trading-tw = "trading_tw:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
