[project]
name = "trading-tw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "shioaji[speed]>=1.3.2",
    "yfinance>=0.2.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
trading-tw = "trading_tw:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
